--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "request": "^2.88.2",
     "sqlite3": "^5.0.0"
   },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "keywords": [
     "scraper",
     "morph"
