--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "sqlite3": "^5.0.0"
   },
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": "16.13.0",
+    "npm": "8.1.0"
   },
   "keywords": [
     "scraper",
