Try something which I copied from another project
https://github.com/kayakr/tapuhi/blob/master/package.json

Unfortunately, it seems there is no nodejs project which ran successfully in the last 12 months

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "sqlite3": "^5.0.0"
   },
   "engines": {
-    "node": "16.13.0",
-    "npm": "8.1.0"
+    "node": "12.x"
   },
   "keywords": [
     "scraper",
