--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "async": "^2.6.4",
-    "cheerio": "^1.0.0-rc.12",
+    "async": "^3.2.6",
+    "cheerio": "1.0.0-rc.12",
     "request": "^2.88.2",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.1.7"
   },
   "engines": {
     "node": "16.x"
