--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "version": "0.0.1",
   "main": "scraper.js",
   "dependencies": {
-    "async": "^2.6.3",
-    "cheerio": "^1.0.0-rc.10",
+    "async": "^3.2.6",
+    "cheerio": "^1.0.0",
     "request": "^2.88.2",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.1.7"
   },
   "engines": {
     "node": "13.1.0",
